--- a/app/views/bar/index.html.erb
+++ b/app/views/bar/index.html.erb
@@ -1,2 +1,53 @@
 <h1>Bar#index</h1>
 <p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<p>Find me in app/views/bar/index.html.erb</p>
+<%= link_to "Foo", foo_index_path %>
