--- a/app/views/foo/index.html.erb
+++ b/app/views/foo/index.html.erb
@@ -1,2 +1,53 @@
 <h1>Foo#index</h1>
 <p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<p>Find me in app/views/foo/index.html.erb</p>
+<%= link_to "Bar", bar_index_path %>
